2015-10-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2015-10-21  vaiorabbit  <http://twitter.com/vaiorabbit>

	* ext/opengl_c/rogl.c (rogl_method_SetFiddlePointerModule): A trick to use Fiddle::Pointer.
	* sample: Ported samples from original ruby edition.
	* opengl-bindings_c.gemspec: Added dependency (opengl-bindings-1.5.0 or higher)

2015-10-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator/c_generate_command.rb: glGetString and glGetStringi now return ruby's string.

2015-10-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator/c_generate_common.rb: ptrdiff_t

2015-10-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample: Ported some samples from original opengl-bindings.

2015-10-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* opengl-bindings_c.gemspec: Added.

2015-10-13  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generate_ext_command_list.rb, generate_ext_enum_list.rb: Added.
	* gl.xml: Updated.

2015-10-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* c_generate_ext_command.rb: Supports extension entry points.4
	* opengl_c_impl.{dll/so/bundle} is renamed into opengl_c_impl.{dll/so/bundle}

2015-10-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* (Announce) First release.
