@@ -1,6 +1,7 @@
 2015-10-24  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Updated using latest gl.xml.
+	* sample/NamaspaceMigration: Added.
 
 2015-10-21  vaiorabbit  <http://twitter.com/vaiorabbit>
 
